<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SA Go</string>
    <string name="game_weight_prompt">Enter game weight</string>
    <string name="handicap_prompt">Black stones on board before White\'s first move</string>
    <string name="winner_text_label">Winner</string>
    <string name="komi_text_label">Komi</string>
    <string name="date_text_label">Date</string>
    <string name="notes_text_label">Notes</string>
    <string name="handicap_text_label">Handicap</string>
    <string name="weight_text_label">Weight</string>
    <string name="change_date">Change…</string>
    <string name="save">Save</string>
    <string name="save_game">Save Result</string>
    <string name="capture_result">Capture Result</string>
    <string name="settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="undo">Undo</string>
    <string name="vs">&#160;vs&#160;</string>
    <string name="capture_another">Capture another?</string>
    <string name="result_confirmed">Confirm Result</string>
    <string name="undo_confirmed">Confirm Undo</string>
    <string name="select_favourite_players">Select Favourite Players</string>
    <string name="select_white_player">Select White Player</string>
    <string name="select_black_player">Select Black Player</string>
    <string name="game_details">Game Details</string>
    <string name="favourites">Favourites</string>
    <string name="international">International</string>
    <string name="return_to_start">Home</string>
    <string name="player_logfile">Player Logfile</string>
    <string name="player">Player</string>
    <string name="select_player">Select Player</string>
    <string name="display_log_file">Display Log File</string>
    <string name="player_ratings">Player Ratings</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort_by_rank">By Rank</string>
    <string name="white_radio">White (%1$s)</string>
    <string name="black_radio">Black (%1$s)</string>
    <string name="previous_notes">Load…</string>>
    <string name="double_space_pad">&#160;&#160;</string>
    <string name="loading_message">Loading…</string>
    <string name="ratings_file_error_message">Ratings file error!</string>
    <string name="player_error_message">Player not found error!</string>
    <string name="network_error_message">Network error!</string>
    <string name="authorization_error_message">Authorization error!</string>
    <string name="site_error_message">Site internal error!</string>
    <string name="sending_message">Sending request…</string>
    <string name="partial_message">Request succeeded, fetching result…</string>
    <string name="send_client_error_message">Request rejected!</string>
    <string name="send_network_error_message">Network error sending request!</string>
    <string name="send_authorization_error_message">Authorisation error sending request!</string>
    <string name="fetch_network_error_message">Network error fetching result!</string>
    <string name="fetch_authorization_error_message">Authorisation error fetching result!</string>


    <string-array name="game_weight_list">
        <item>Free (0)</item>
        <item>Internet (0.5)</item>
        <item>Normal (1)</item>
        <item>Tournament (1.5)</item>
    </string-array>

    <string-array name="game_handicap_list">
        <item>Even</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="game_winner_list">
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string name="game_notes_characters">0123456789 abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-_.?</string>

    <string name="password_change_message">Do not change the default values of &quot;guest&quot;/&quot;guest&quot; unless you have been given an admin account by an SA Go administrator.</string>

    <string name="south_african_go">South African Go</string>

</resources>