<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#336699">

        <TextView
            android:id="@+id/txtSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#336699"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtUsername"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:inputType="text">

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/txtPassword"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password" />

            <TextView
                android:id="@+id/textViewShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_change_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnSelectFavouritePlayers"
        style="@style/ButtonText"
        android:background="@drawable/blue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/select_favourite_players"
        android:textStyle="bold" />

    <Button
        android:id="@+id/DoneButton"
        style="@style/ButtonText"
        android:background="@drawable/green_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/save"
        android:textStyle="bold" />

</LinearLayout>
