<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#336699">

        <TextView
            android:id="@+id/txtResultConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#336699"
            android:textColor="#ffffff"
            android:text="@string/result_confirmed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:labelFor="@id/txtOutput"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtLoadingStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/loading_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="italic"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollerConfirm"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="true" >

        <TextView
            android:id="@+id/txtOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="11sp"
            android:typeface="monospace"
            android:scrollHorizontally="true" />

    </ScrollView>

    <Button
        android:id="@+id/btnUndo"
        style="@style/ButtonText"
        android:background="@drawable/red_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/undo"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReturnToStart"
        style="@style/ButtonText"
        android:background="@drawable/blue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/return_to_start"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNewResult"
        style="@style/ButtonText"
        android:background="@drawable/green_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/capture_result"
        android:textStyle="bold" />

</LinearLayout>