<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#336699">

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/txtPlayerRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#336699"
            android:text="@string/player_ratings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSortByName"
            style="@style/ButtonText"
            android:background="@drawable/magenta_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_name"
            android:minHeight="48dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnSortByRank"
            style="@style/ButtonText"
            android:background="@drawable/magenta_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/sort_by_rank"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtLoadingStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/loading_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="italic"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

    </ScrollView>

</LinearLayout>