<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/SteelBlue">

        <TextView
            android:id="@+id/txtUndoConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/SteelBlue"
            android:textColor="@color/White"
            android:text="@string/undo_confirmed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:labelFor="@id/txtOutput" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtLoadingStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/loading_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black"
        android:textStyle="italic"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtWhitePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black"
            android:background="@color/White"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtBlackPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollerUndo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="true" >

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:textSize="11sp"
        android:typeface="monospace"
        android:scrollHorizontally="true" />

    </ScrollView>

    <Button
        android:id="@+id/btnReturnToStart"
        style="@style/ButtonText"
        android:background="@drawable/blue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/return_to_start"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNewResult"
        style="@style/ButtonText"
        android:background="@drawable/green_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/capture_result"
        android:textStyle="bold" />

</LinearLayout>